--- a/css/menu.css
+++ b/css/menu.css
@@ -1348,12 +1348,15 @@ body {
 }
 
 #mdf_menu {
-    max-width: 1090px;
+    /* max-width: 1090px; */
     
     /* margin: auto; */
-    margin-left: 8%;
+    /* margin-left: 8%; */
+    /* float: right; */
+    top: 0%;
+    
     background-color: rgba(77, 7, 34, 0.98);
-    position: relative;
+    position: fixed;
     z-index: 999;
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
